Some fixes.
- Show first and last pagination buttons if more than 2 pages.
- Split queries using SqlParser.
- Increase max rows to 50,000.
- Render decimals properly, rather than always using scientific
  notation.
- Rename tables.js to resizetable.js
- Fix formatting on truncated row count.

--- a/client/resources/sqlui.css
+++ b/client/resources/sqlui.css
@@ -493,15 +493,8 @@ select {
     font-size: 16px;
 }
 
-#next-button {
-
-}
-
-#prev-button {
-    margin: 0 10px;
-}
-
 .pagination-button {
+    margin: 0 10px;
     cursor: pointer;
     background: none;
     color: #333;
